--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
                     <ul>
                         <li>每個Line帳號與Wotel帳號限參與一次</li>
+                        <li>每個Line帳號，僅採計第一次送出的Wotel帳號</li>
                         <li>活動獎品僅限個人使用</li>
                         <li>活動贈與之商業會員期限為1個月</li>
                         <li>重複登記者視情節取消參與資格</li>
