--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
 
+    <span class="floating"></span>
+    
     <section class="container">
 
         <div class="box">
+
 
             <h1 class="title">
                 <div class="text">
