--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
             <div class="shadow">
                 <div class="enterBox">
-                    <input id="account" placeholder="請輸入Wotel帳號">
-                    <span class="btn" onclick="openCheckWindow()">送出</span>
+                    <div>
+                        <input id="account" placeholder="請輸入Wotel帳號">
+                        <span class="btn" onclick="openCheckWindow()">送出</span>
+                    </div>
                 </div>
             </div>
 
@@ -41,6 +43,11 @@
                     <p>即可報名參加</p>
                     <p>經查核無誤後</p>
                     <p>便可獲得<b>一個月的Wotel商業會員</b></p>
+
+                    <hr>
+                    <div style="margin-top: 1rem;">
+                        <span><i class="fa fa-user-plus"></i> 還沒有帳號！？<a href="https://wotel.com.tw/website_register/register_general_member/1">立即註冊</a>！</span>
+                    </div>
                 </div>
             </div>
 
