--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>輸入Wotel帳號後<b>送出</b></p>
                     <p>即可報名參加</p>
                     <p>經查核無誤後</p>
-                    <p>便可獲得<b>一個月的Wotel商業會員</b></p>
+                    <p>便可獲得<b>Wotel商業會員</b></p>
 
                     <hr>
                     <div style="margin-top: 1rem;">
